--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -16,7 +16,7 @@
       <label for="password">Password</label>
       <input type="password" id="password" name="password" class="form-control" placeholder="Password" required>
     </p>
-    <button class="btn btn-lg btn-primary btn-block" type="button">Sign in</button>
+    <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
   </form>
 </div>
 </body>
