--- a/src/main/resources/templates/success.html
+++ b/src/main/resources/templates/success.html
@@ -6,5 +6,8 @@
 </head>
 <body>
 <h1>Success</h1>
+<form action="/auth/logout" method="post">
+    <button type="submit">Logout</button>
+</form>
 </body>
 </html>
